--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
+    <!-- FontAwesome Icons -->
+    <script src="https://kit.fontawesome.com/8215aa9d5e.js" crossorigin="anonymous"></script>
+
     <!-- Style Sheets -->
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/utilities.css">
@@ -117,6 +120,109 @@
         </div>
     </section>
 
+    <section id="what">
+        <div class="container-fluid">
+            <div class="row d-flex flex-row">
+                <div class="col-lg-6 flex-column">
+                    <h3 class="who-heading mb-5">What we do</h3>
+                    <p class="who-para">From a long time we have looked for modern and and new age farming techniques as a way to move ahead in the farming sector with company, our vision is to also make the transactions modern as well.
+                        <br><br>At KrishiBimb, we intend to give the farmers a platform where they can sell their crops all over India and for the buyers the can buy the crops they want with assured quality, and therefore removing the middle men.
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <!-- <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel"> -->
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="2500">
+                                <img src="Images/tractor.png" class="d-block w-100 what-img" alt="Tractor">
+                              </div>
+                            <div class="carousel-item" data-bs-interval="2500">
+                                <img src="Images/another-market.png" class="d-block w-100 what-img" alt="Market">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="2500">
+                                <img src="Images/market.png" class="d-block w-100 what-img" alt="Market">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="footer">
+        <div class="row flex-row gx-0 mb-5">
+            <div class="col-lg-6 flex-column">
+                    <h6 class="subheading-footer">FOLLOW US</h6>
+                    <ul class="nav">
+                        <li>
+                           <i class="fa-solid fa-globe fa-2x me-2 footer-icon"></i>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-github fa-2x mx-2 footer-icon"></i>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-twitter fa-2x mx-2 footer-icon"></i>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-linkedin-in fa-2x ms-2 footer-icon"></i>
+                        </li>
+                    </ul>
+            </div>
+            <div class="col-lg-6 flex-column">
+                <h6 class="subheading-footer">WRITE US AT</h6>
+                <h4 class="m-0 footer-email">mayankdhankar2002@gmail.com</h4>
+            </div>
+        </div>
+
+
+        <div class="row flex-row gx-0">
+            <div class="col-lg-6 flex-column">
+                <div class="row row-cols-2 flex-row info gx-0">
+                    <div class="col-12"><h6 class="subheading-footer">INFORMATION</h6></div>
+                    <div class="col-3  mb-3">About Krishi Bimb</div>
+                    <div class="col-7">Get in Touch</div>
+                    <div class="col-3">Privacy Policy</div>
+                    <div class="col">Terms of Service</div>
+                </div>
+            </div>
+            <div class="col-lg-6 flex-column">
+                <h6 class="subheading-footer">KEEP IN TOUCH</h6>
+                <div class="row row-cols-2 flex-row info gx-0">
+                    <div class="col-lg-5 form-floating me-4 mb-4">
+                            <input type="text" id="floatingInput" class="form-control" placeholder="Mayank">
+                            <label for="floatingInput">Your Name</label>
+                    </div>
+                    <div class="col-lg-5 form-floating mb-4">
+                        <input type="email" id="floatingEmail" class="form-control" placeholder="mayank@gmail.com">
+                        <label for="floatingEmail">Your Email</label>
+                    </div>
+                    <div class="col-lg-6 form-floating">
+                        <textarea name="" id="floatingTextArea" class="form-control"placeholder="Leave your Message here"></textarea>
+                        <label for="floatingTextArea">Your Message</label>
+                    </div>
+                    <div class="col-lg-2 ms-4 align-self-center">
+                        <button class="btn btn-lg btn-primary">SEND</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    
     <script src="app.js"></script>
 </body>
 </html>
