add social links

--- a/index.html
+++ b/index.html
@@ -166,15 +166,15 @@
             <div class="col-lg-6 flex-column">
                     <h6 class="subheading-footer">FOLLOW US</h6>
                     <ul class="nav">
-                        <li><a href=""><i class="fa-solid fa-globe fa-2x me-2 footer-icon"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-github fa-2x mx-2 footer-icon"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-twitter fa-2x mx-2 footer-icon"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-linkedin-in fa-2x ms-2 footer-icon"></i></a></li>
+                        <li><a href="https://github.com/mayankdhnkr"><i class="fa-solid fa-globe fa-2x me-2 footer-icon"></i></a></li>
+                        <li><a href="https://github.com/mayankdhnkr"><i class="fa-brands fa-github fa-2x mx-2 footer-icon"></i></a></li>
+                        <li><a href="https://twitter.com/dhankar_mayank"><i class="fa-brands fa-twitter fa-2x mx-2 footer-icon"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/mayankxdhnkr/"><i class="fa-brands fa-linkedin-in fa-2x ms-2 footer-icon"></i></a></li>
                     </ul>
             </div>
             <div class="col-lg-6 flex-column">
                 <h6 class="subheading-footer">WRITE US AT</h6>
-                <a href="" class="text-decoration-none "><h4 class="footer-email">mayankdhankar2002@gmail.com</h4></a>
+                <a href="mailto:mayankdhanakr2002@gmail.com" class="text-decoration-none "><h4 class="footer-email">mayankdhankar2002@gmail.com</h4></a>
             </div>
         </div>
 
