complete buyer side

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="hero-section">
     <div class="container-fluid hero-background">
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <a href="#" class="navbar-brand">
                     <img src="Images/Krishi Bimb Logo.png" alt="KrishiBimb-logo" class="ms-5 me-2">
