basic structure done

--- a/buyer-transaction.html
+++ b/buyer-transaction.html
@@ -45,13 +45,13 @@
     </nav>
     
     <div class="d-flex">
-        <h1 class="heading mt-3">Cart</h1>
+        <h1 class="heading mt-3">Transactions</h1>
     </div>
 
     <div class="tabs mt-3">
         <div class="button-tabs row d-flex flex-row g-0 mx-auto">
             <div class="col-lg-4 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-outline-primary">Find a Bid</button>
+                <button class="btn btn-lg btn-outline-primary">Find a Crop</button>
             </div>
             <div class="col-lg-4 d-inline-flex justify-content-around">
                 <button class="btn btn-lg btn-outline-primary">Cart</button>
