--- a/buyer-transaction.html
+++ b/buyer-transaction.html
@@ -51,13 +51,13 @@
     <div class="tabs mt-3">
         <div class="button-tabs row d-flex flex-row g-0 mx-auto">
             <div class="col-lg-4 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-outline-primary">Find a Crop</button>
+                <a href="productpage.html"><button class="btn btn-lg btn-outline-primary">Find a Crop</button></a>
             </div>
             <div class="col-lg-4 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-outline-primary">Cart</button>
+                <a href="buyer-cart.html"><button class="btn btn-lg btn-outline-primary">Cart</button></a>
             </div>
             <div class="col-lg-4 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-primary">Transactions</button>
+                <a href="buyer-transaction.html"><button class="btn btn-lg btn-primary">Transactions</button></a>
             </div>
         </div>
     </div>
