--- a/farmer-transactions.html
+++ b/farmer-transactions.html
@@ -51,10 +51,10 @@
     <div class="tabs mt-3">
         <div class="button-tabs row d-flex flex-row g-0 mx-auto">
             <div class="col-lg-6 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-outline-primary">Add Crop</button>
+                <a href="addcrop.html"><button class="btn btn-lg btn-outline-primary">Add Crop</button></a>
             </div>
             <div class="col-lg-6 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-primary">Transactions</button>
+                <a href="farmer-transactions.html"><button class="btn btn-lg btn-primary">Transactions</button></a>
             </div>
         </div>
     </div>
