--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                         </li>
                     </ul>
 
-            
-                    <button class="btn btn-lg btn-primary mx-2 ms-4 fuck">Sign In</button>
-                    <button class="btn btn-lg btn-outline-primary mx-2 me-5 signup-btn">Sign Up</button>
+                    <a href="login.html"><button class="btn btn-lg btn-primary mx-2 ms-4 fuck">Sign In</button></a>
+                    <a href="signup.html"><button class="btn btn-lg btn-outline-primary mx-2 me-5 signup-btn">Sign Up</button></a>
                 
                 </div>
             </div>
