--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
             
             <h6>Forgot Password?</h6>
             <div class="d-grid mt-5">
-            <button class="btn btn-lg btn-primary">Sign Up</button>
+            <button class="btn btn-lg btn-primary mb-3">Sign Up</button>
             <p>Already Registered? <span class="signin ps-1">Sign in</span></p>
             </div>
         </div>
