--- a/addcrop.html
+++ b/addcrop.html
@@ -54,7 +54,7 @@
                 <button class="btn btn-lg btn-primary">Add Crop</button>
             </div>
             <div class="col-lg-6 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-outline-primary">Transactions</button>
+                <a href="farmer-transactions.html"><button class="btn btn-lg btn-outline-primary">Transactions</button></a>
             </div>
         </div>
     </div>
