--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <h4 class="hero-subheading">In a Snap</h4>
         </div>
         <div class="flex-row mt-5 ms-5 ps-5 title-text">
-            <button class="btn btn-lg btn-primary me-2 choice-button">Farmer</button>
-            <button class="btn btn-lg btn-primary ms-2 choice-button">Buyer</button>
+            <a href="addcrop.html"><button class="btn btn-lg btn-primary me-2 choice-button">Farmer</button></a>
+            <a href="productpage.html"><button class="btn btn-lg btn-primary ms-2 choice-button">Buyer</button></a>
         </div>        
     </div>
     </section>
