--- a/productpage.html
+++ b/productpage.html
@@ -45,19 +45,19 @@
     </nav>
 
     <div class="d-flex">
-        <h1 class="heading mt-3">Farmer</h1>
+        <h1 class="heading mt-3">Find Crops</h1>
     </div>
 
     <div class="tabs mt-3">
         <div class="button-tabs row d-flex flex-row g-0 mx-auto">
             <div class="col-lg-4 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-primary">Find a Bid</button>
+                <a href="productpage.html"><button class="btn btn-lg btn-primary">Find a Crop</button></a>
             </div>
             <div class="col-lg-4 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-outline-primary">Cart</button>
+                <a href="buyer-cart.html"><button class="btn btn-lg btn-outline-primary">Cart</button></a>
             </div>
             <div class="col-lg-4 d-inline-flex justify-content-around">
-                <button class="btn btn-lg btn-outline-primary">Transactions</button>
+                <a href="buyer-transaction.html"><button class="btn btn-lg btn-outline-primary">Transactions</button></a>
             </div>
         </div>
     </div>
