--- a/farmer-transactions.html
+++ b/farmer-transactions.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a href="#" class="navbar-brand">
+            <a href="index.html" class="navbar-brand">
                 <img src="Images/Krishi Bimb Logo.png" alt="KrishiBimb-logo" class="ms-5 me-2">
                 <span class="navbar-logo-text">Krishi Bimb</span>
             </a>
@@ -35,7 +35,7 @@
                         <a href="" class="nav-link"><img src="Images/Mayank.png" alt="Character Avatar" class="avatar"></a>                        
                     </li> 
                     <li class="navbar-item align-self-center">
-                        <a href="#" class="nav-link">
+                        <a href="profile.html" class="nav-link">
                             <h5>Mayank</h5>
                         </a>
                     </li>
