--- a/addcrop.html
+++ b/addcrop.html
@@ -16,6 +16,7 @@
     <!-- Style Sheets -->
     <link rel="stylesheet" href="CSS/addcrop.css">
     <link rel="stylesheet" href="CSS/utilities.css">
+    <link rel="icon" type="image/x-icon" href="Images/Krishi Bimb Favicon.png">
 
 </head>
 <body>
