--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Style Sheets -->
     <link rel="stylesheet" href="CSS/utilities.css">
     <link rel="stylesheet" href="CSS/styles.css">
-
+    <link rel="icon" type="image/x-icon" href="Images/Krishi Bimb Favicon.png">
 
 </head>
 <body>
