responsive landing page

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <img src="Images/Krishi Bimb Logo.png" alt="KrishiBimb-logo" class="ms-5 me-2">
-                    <span class="navbar-logo-text">Krishi Bimb</span>
+                    <span class="navbar-logo-text pt-1 mt-1">Krishi Bimb</span>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,11 +59,11 @@
         </nav>
 
         <!-- <img src="Images/Background.png" alt="Background Images" class="absolute hero-background"> -->
-        <div class="flex-row mt-5 pt-5 ms-5 ps-5 title-text">
+        <div class="flex-row mt-lg-5 pt-lg-5 ms-lg-5 ps-lg-5 title-text">
             <h1 class="hero-heading">Farmer to Buyer</h1>
-            <h4 class="hero-subheading">In a Snap</h4>
+            <h4 class="hero-subheading mt-5 mt-md-0">In a Snap</h4>
         </div>
-        <div class="flex-row mt-5 ms-5 ps-5 title-text">
+        <div class="flex-row mt-5 ms-lg-5 ps-lg-5 title-text">
             <a href="addcrop.html"><button class="btn btn-lg btn-primary me-2 choice-button">Farmer</button></a>
             <a href="productpage.html"><button class="btn btn-lg btn-primary ms-2 choice-button">Buyer</button></a>
         </div>        
@@ -163,7 +163,7 @@
 
     <section id="footer">
         <div class="row flex-row gx-0 mb-5">
-            <div class="col-lg-6 flex-column">
+            <div class="col-lg-6 flex-column mb-5">
                     <h6 class="subheading-footer">FOLLOW US</h6>
                     <ul class="nav">
                         <li><a href="https://github.com/mayankdhnkr"><i class="fa-solid fa-globe fa-2x me-2 footer-icon"></i></a></li>
@@ -181,7 +181,7 @@
 
         <div class="row flex-row gx-0">
             <div class="col-lg-6 flex-column">
-                <div class="row row-cols-2 flex-row info gx-0">
+                <div class="row row-cols-2 flex-row info gx-0 mb-5">
                     <div class="col-12"><h6 class="subheading-footer">INFORMATION</h6></div>
                     <div class="col-3 mb-3"><a href="" class="nav-link footer-link">About Krishi Bimb</a></div>
                     <div class="col-7"><a href="" class="nav-link footer-link">Get in Touch</a></div>
@@ -196,15 +196,15 @@
                             <input type="text" id="floatingInput" class="form-control" placeholder="Mayank">
                             <label for="floatingInput">Your Name</label>
                     </div>
-                    <div class="col-lg-5 form-floating mb-4">
+                    <div class="col-lg-5 form-floating mb-4 me-3">
                         <input type="email" id="floatingEmail" class="form-control" placeholder="mayank@gmail.com">
                         <label for="floatingEmail">Your Email</label>
                     </div>
-                    <div class="col-lg-6 form-floating">
+                    <div class="col-lg-6 form-floating mb-2">
                         <textarea name="" id="floatingTextArea" class="form-control"placeholder="Leave your Message here"></textarea>
                         <label for="floatingTextArea">Your Message</label>
                     </div>
-                    <div class="col-lg-2 ms-4 align-self-center">
+                    <div class="col-lg-2 ms-4 align-self-center footer-button">
                         <button class="btn btn-lg btn-primary">SEND</button>
                     </div>
                 </div>
