--- a/addcrop.html
+++ b/addcrop.html
@@ -51,17 +51,24 @@
 
     <div class="tabs mt-3">
         <div class="button-tabs row d-flex flex-row g-0 mx-auto">
-            <div class="col-lg-6 d-inline-flex justify-content-around">
+            <div class="col-6 d-inline-flex justify-content-around">
                 <button class="btn btn-lg btn-primary">Add Crop</button>
             </div>
-            <div class="col-lg-6 d-inline-flex justify-content-around">
+            <div class="col-6 d-inline-flex justify-content-around">
                 <a href="farmer-transactions.html"><button class="btn btn-lg btn-outline-primary">Transactions</button></a>
             </div>
         </div>
     </div>
 
-    <div class="d-flex flex-row row gx-5 fields mt-5">
-        <div class="col-lg-6">
+    <div class="d-flex flex-row row flex-row-reverse gx-5 fields mt-5">
+        <div class="col-lg-6 mb-5">
+            <h5 class="mb-4">Upload Image</h5>
+            <div id="upload-image">
+                <img src="Images/uploadimag.svg" id="placeholder-image">
+            </div>
+            <input class="mt-4 form-control" type="file" id="img-upload">
+        </div>
+        <div class="col-lg-6 mb-5">
             <div class="mb-3">
                 <label for="formGroupExampleInput" class="form-label">Crop Name</label>
                 <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
@@ -83,13 +90,6 @@
                 <button class="btn btn-lg btn-primary">Post</button>
                 <button class="btn btn-lg btn-outline-primary">Cancel</button>
             </div>
-        </div>
-        <div class="col-lg-4">
-            <h5 class="mb-4">Upload Image</h5>
-            <div id="upload-image">
-                <img src="Images/uploadimag.svg" id="placeholder-image">
-            </div>
-            <input class="mt-4 form-control" type="file" id="img-upload">
         </div>
     </div>
 
