--- a/buyer-cart.html
+++ b/buyer-cart.html
@@ -51,13 +51,13 @@
 
     <div class="tabs mt-3">
         <div class="button-tabs row d-flex flex-row g-0 mx-auto">
-            <div class="col-lg-4 d-inline-flex justify-content-around">
-                <a href="productpage.html"><button class="btn btn-lg btn-outline-primary">Find a Crop</button></a>
+            <div class="col-4 d-inline-flex justify-content-around">
+                <a href="productpage.html"><button class="btn btn-lg btn-outline-primary">Search</button></a>
             </div>
-            <div class="col-lg-4 d-inline-flex justify-content-around">
+            <div class="col-4 d-inline-flex justify-content-around">
                 <a href="buyer-cart.html"><button class="btn btn-lg btn-primary">Cart</button></a>
             </div>
-            <div class="col-lg-4 d-inline-flex justify-content-around">
+            <div class="col-4 d-inline-flex justify-content-around">
                 <a href="buyer-transaction.html"><button class="btn btn-lg btn-outline-primary">Transactions</button></a>
             </div>
         </div>
@@ -65,7 +65,7 @@
 
     <div class="d-flex mt-5">
         <div class="product-list d-flex flex-column">
-            <div class="product-card card my-4 pe-2">
+            <div class="product-card card my-4">
                 <div class="row g-0">
                     <div class="col-md-3">
                         <img src="Images/Wheat.png" alt="" class="rounded-start course-image">  
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-card card my-4 pe-2">
+            <div class="product-card card my-4">
                 <div class="row g-0">
                     <div class="col-md-3">
                         <img src="Images/Wheat.png" alt="" class="rounded-start course-image">  
@@ -126,7 +126,7 @@
                 </div>
             </div>
             
-            <div class="product-card card my-4 pe-2">
+            <div class="product-card card my-4">
                 <div class="row g-0">
                     <div class="col-md-3">
                         <img src="Images/Wheat.png" alt="" class="rounded-start course-image">  
