--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             
         </div>
         <div class="col-lg-6 field">
-            <h1 class="mb-5">Log In</h1>
+            <h1 class="mb-5 mx-auto d-inline-block">Log In</h1>
             
             <h4>Email</h4>
             <input type="email" class="form-control form-control-lg mb-4" id="exampleFormControlInput1" placeholder="name@example.com">
