--- a/productpage.html
+++ b/productpage.html
@@ -51,20 +51,20 @@
 
     <div class="tabs mt-3">
         <div class="button-tabs row d-flex flex-row g-0 mx-auto">
-            <div class="col-lg-4 d-inline-flex justify-content-around">
-                <a href="productpage.html"><button class="btn btn-lg btn-primary">Find a Crop</button></a>
+            <div class="col-4 d-inline-flex justify-content-around">
+                <a href="productpage.html"><button class="btn btn-lg btn-primary">Search</button></a>
             </div>
-            <div class="col-lg-4 d-inline-flex justify-content-around">
+            <div class="col-4 d-inline-flex justify-content-around">
                 <a href="buyer-cart.html"><button class="btn btn-lg btn-outline-primary">Cart</button></a>
             </div>
-            <div class="col-lg-4 d-inline-flex justify-content-around">
+            <div class="col-4 d-inline-flex justify-content-around">
                 <a href="buyer-transaction.html"><button class="btn btn-lg btn-outline-primary">Transactions</button></a>
             </div>
         </div>
     </div>
     <div class="div mt-5">
         <div class="d-flex search">
-            <input type="text" name="Search" id="#searchfield" class="form-control me-5" placeholder="Search a Product">
+            <input type="text" name="Search" id="#searchfield" class="form-control me-2" placeholder="Search a Product">
             <button class="btn btn-lg btn-primary">Search</button>
         </div>
     </div>
