--- a/farmer-transactions.html
+++ b/farmer-transactions.html
@@ -51,10 +51,10 @@
 
     <div class="tabs mt-3">
         <div class="button-tabs row d-flex flex-row g-0 mx-auto">
-            <div class="col-lg-6 d-inline-flex justify-content-around">
+            <div class="col-6 d-inline-flex justify-content-around">
                 <a href="addcrop.html"><button class="btn btn-lg btn-outline-primary">Add Crop</button></a>
             </div>
-            <div class="col-lg-6 d-inline-flex justify-content-around">
+            <div class="col-6 d-inline-flex justify-content-around">
                 <a href="farmer-transactions.html"><button class="btn btn-lg btn-primary">Transactions</button></a>
             </div>
         </div>
@@ -68,7 +68,7 @@
 
     <div class="d-flex mt-5">
         <div class="product-list d-flex flex-column">
-            <div class="product-card card my-4 pe-2">
+            <div class="product-card card my-4">
                 <div class="row g-0">
                     <div class="col-md-3">
                         <img src="Images/Wheat.png" alt="" class="rounded-start course-image">  
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-card card my-4 pe-2">
+            <div class="product-card card my-4">
                 <div class="row g-0">
                     <div class="col-md-3">
                         <img src="Images/Wheat.png" alt="" class="rounded-start course-image">  
@@ -104,7 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-card card my-4 pe-2">
+            <div class="product-card card my-4">
                 <div class="row g-0">
                     <div class="col-md-3">
                         <img src="Images/Wheat.png" alt="" class="rounded-start course-image">  
