--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="hero-section">
     <div class="container-fluid hero-background">
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg fixed-top pb-2 pb-lg-0">
             <div class="container-fluid">
                 <a href="index.html" class="navbar-brand">
                     <img src="Images/Krishi Bimb Logo.png" alt="KrishiBimb-logo" class="ms-5 me-2">
