--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
             <h6>Forgot Password?</h6>
             <div class="d-grid mt-5">
             <button class="btn btn-lg btn-primary mb-3">Log in</button>
-            <p>Dont have an Account? <span class="signin ps-1"><a href="signup.html">Sign up</a></span></p>
+            <p>Dont have an Account? <span class="signin ps-1">Sign up</span></p>
             </div>
         </div>
     </div>
