--- a/profile.html
+++ b/profile.html
@@ -78,11 +78,11 @@
             
             <h5 class="mb-4">Change Password</h5>
             <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">User Location</label>
+                <label for="formGroupExampleInput2" class="form-label">New Password</label>
                 <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
             </div>
             <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">User Location</label>
+                <label for="formGroupExampleInput2" class="form-label">Confirm Password</label>
                 <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
             </div>
             
