index page navbar

--- a/addcrop.html
+++ b/addcrop.html
@@ -48,7 +48,7 @@
     <div class="d-flex">
         <h1 class="heading mt-3">Add Crop</h1>
     </div>
-    <form action="addcrop.php" method="post" >
+    <form action="addcrop.php" method="post" enctype="multipart/form-data">
         <div class="d-flex flex-row row flex-row-reverse gx-5 fields mt-5">
             <div class="col-lg-6 mb-5">
                 <h5 class="mb-4">Upload Image</h5>
