--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="flex-row mt-5 ms-lg-5 ps-lg-5 title-text">
             <a href="addcrop.html"><button class="btn btn-lg btn-primary me-2 choice-button">Farmer</button></a>
-            <a href="productpage.html"><button class="btn btn-lg btn-primary ms-2 choice-button">Buyer</button></a>
+            <a href="productpage.php"><button class="btn btn-lg btn-primary ms-2 choice-button">Buyer</button></a>
         </div>        
     </div>
     </section>
