--- a/addcrop.html
+++ b/addcrop.html
@@ -22,7 +22,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand">
+            <a href="index-signedin.php" class="navbar-brand">
                 <img src="Images/Krishi Bimb Logo.png" alt="KrishiBimb-logo" class="ms-5 me-2">
                 <span class="navbar-logo-text">Krishi Bimb</span>
             </a>
