--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg fixed-top pb-2 pb-lg-0">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">
+                <a href="index-signedin.php" class="navbar-brand">
                     <img src="Images/Krishi Bimb Logo.png" alt="KrishiBimb-logo" class="ms-5 me-2">
                     <span class="navbar-logo-text pt-1 mt-1">Krishi Bimb</span>
                 </a>
