add crop issue solved

--- a/farmer-transactions.html
+++ b/farmer-transactions.html
@@ -52,7 +52,7 @@
     <div class="tabs mt-3">
         <div class="button-tabs row d-flex flex-row g-0 mx-auto">
             <div class="col-6 d-inline-flex justify-content-around">
-                <a href="addcrop.html"><button class="btn btn-lg btn-outline-primary">Add Crop</button></a>
+                <a href="add.php"><button class="btn btn-lg btn-outline-primary">Add Crop</button></a>
             </div>
             <div class="col-6 d-inline-flex justify-content-around">
                 <a href="farmer-transactions.html"><button class="btn btn-lg btn-primary">Transactions</button></a>
