--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h4 class="hero-subheading mt-5 mt-md-0">In a Snap</h4>
         </div>
         <div class="flex-row mt-5 ms-lg-5 ps-lg-5 title-text">
-            <a href="addcrop.html"><button class="btn btn-lg btn-primary me-2 choice-button">Farmer</button></a>
+            <a href="add.php"><button class="btn btn-lg btn-primary me-2 choice-button">Farmer</button></a>
             <a href="productpage.php"><button class="btn btn-lg btn-primary ms-2 choice-button">Buyer</button></a>
         </div>        
     </div>
